--- a/public_html/bitrix/templates/bestmaket_new/template_styles.css
+++ b/public_html/bitrix/templates/bestmaket_new/template_styles.css
@@ -149,7 +149,7 @@ body {
 	font-size: 17px;
 }
 .header .open-menu {
-	/* display: block; */
+	display: flex;
 }
 .header .menu {
 	justify-content: space-between;
@@ -340,10 +340,10 @@ body {
 	background-color: #8dce26;
 	/* padding: 15px 10% 25px; */
 	/* box-shadow: 0 0 10px #676767; */
-	}
-	.main-contacts .form-green {
-		background-color: transparent;
-	}
+}
+.main-contacts .form-green {
+	background-color: transparent;
+}
 .request-calc-2.gray .form-green {
 	color: #000;
 }
@@ -1215,7 +1215,7 @@ body {
 	width: auto !important;
 }
 .clients-slider .intro .letter img {
-	width: 88% ;
+	width: 88%;
 	height: auto !important;
 	box-shadow: 0 0 6px #b8b8b8;
 	vertical-align: top;
@@ -1642,7 +1642,6 @@ body {
 	text-decoration: none;
 	font-size: 16px;
 	line-height: 1.4;
-	
 }
 .footer .polity .copy {
 	float: right;
@@ -4823,7 +4822,6 @@ input:focus {
 	font-size: 16px;
 }
 .fs-20 {
-	
 	font-size: 20px;
 }
 
@@ -4861,8 +4859,8 @@ input:focus {
 
 .fs-48 {
 	--font-size-48: clamp(1.63rem, 3.13vi + 1rem, 3rem);
-	
-		font-size: var(--font-size-48);
+
+	font-size: var(--font-size-48);
 }
 
 .fs-56 {
@@ -5606,7 +5604,7 @@ input:focus {
 	width: 18px;
 	display: block;
 	padding: 0;
-transition: transform 0.5s ease;
+	transition: transform 0.5s ease;
 }
 .layouts-item ul li.small {
 	right: 30px;
@@ -5616,8 +5614,7 @@ transition: transform 0.5s ease;
 	width: 18px;
 }
 .layouts-item ul li .display-all.rotate,
-.layouts-item ul li .display-all:hover
- {
+.layouts-item ul li .display-all:hover {
 	transform: rotate(135deg);
 	transition: transform 0.5s ease;
 }
@@ -5665,8 +5662,8 @@ transition: transform 0.5s ease;
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	padding-top: 24px;	
-	 border-top: 1px solid #000;
+	padding-top: 24px;
+	border-top: 1px solid #000;
 }
 .advantages li {
 	position: relative;
@@ -5726,11 +5723,10 @@ transition: transform 0.5s ease;
 	line-height: 130%;
 	color: #fff;
 	margin-bottom: 18px;
-	
-	}
-	.main-contacts .phone a {
-		text-decoration: none;
-	}
+}
+.main-contacts .phone a {
+	text-decoration: none;
+}
 .main-contacts .schedule {
 	font-weight: 400;
 	font-size: 15px;
@@ -5743,7 +5739,6 @@ transition: transform 0.5s ease;
 	display: inline-block;
 	margin-bottom: 30px;
 	max-width: 180px;
-	
 }
 .main-contacts .messenger__text {
 	font-weight: 300;
@@ -5763,11 +5758,10 @@ transition: transform 0.5s ease;
 	height: 32px;
 }
 .main-contacts .messenger__list a.whatsapp {
-	background: url('images/whatsapp-white.svg')  no-repeat center / 100%;
-	
+	background: url('images/whatsapp-white.svg') no-repeat center / 100%;
 }
 .main-contacts .messenger__list a.tg {
-	background: url('images/telegram-white.svg')  no-repeat center / 100%;
+	background: url('images/telegram-white.svg') no-repeat center / 100%;
 }
 .main-contacts .main-contacts__text p {
 	font-weight: 300;
@@ -5775,7 +5769,7 @@ transition: transform 0.5s ease;
 	line-height: 100%;
 	color: #fff;
 }
-.main-contacts__text--big{
+.main-contacts__text--big {
 	font-size: 36px;
 }
 .main-contacts .social__list {
@@ -5796,66 +5790,125 @@ transition: transform 0.5s ease;
 .main-contacts .social__list a.you {
 	background: url('images/youtube.svg') 50% 50% no-repeat;
 }
-.advantages__title{
+.advantages__title {
 	max-width: 300px;
 }
-.main-contacts form{
+.main-contacts form {
 	flex-direction: column;
 }
-.main-contacts__text{
+.main-contacts__text {
 	max-width: 78%;
 }
-.main-contacts .form-main.contact{
+.main-contacts .form-main.contact {
 	position: relative;
 	border: 10px solid #fff;
 	border-right: none;
-border-radius: 5px;
-padding-top: 35px;
-    padding-left: 55px;
-		/* overflow: hidden; */
-		max-width: 40%;}
-		.main-contacts .form-main.contact::after,
-		.main-contacts .form-main.contact::before{
-			content: "";
-			display: block;
-			background-color:#fff;
-			position: absolute;
-			z-index: 1;
-			right: -50%;
-			left: 50%;
-			height: 10px;
-			
-		}
-		.main-contacts .form-main.contact::after{
-			bottom: -10px;
-		}
-		.main-contacts .form-main.contact::before{
-			top: -10px;
-		}
-		
-.main-contacts .form-green .form-row label{
+	border-radius: 5px;
+	padding-top: 35px;
+	padding-left: 55px;
+	/* overflow: hidden; */
+	max-width: 40%;
+}
+.main-contacts .form-main.contact::after,
+.main-contacts .form-main.contact::before {
+	content: '';
+	display: block;
+	background-color: #fff;
+	position: absolute;
+	z-index: 1;
+	right: -50%;
+	left: 50%;
+	height: 10px;
+}
+.main-contacts .form-main.contact::after {
+	bottom: -10px;
+}
+.main-contacts .form-main.contact::before {
+	top: -10px;
+}
+
+.main-contacts .form-green .form-row label {
 	display: block;
 }
-.main-contacts .form-green .file-upload .text-label{
+.main-contacts .form-green .file-upload .text-label {
 	display: inline-block;
 }
-.main-contacts .form-green .private .check{
+.main-contacts .form-green .private .check {
 	max-width: 100%;
 }
-.main-contacts .form-green .form-submit button{
+.main-contacts .form-green .form-submit button {
 	display: block;
 	width: 100%;
 }
-.menu-mob{
+.menu-mob {
 	display: none;
-	
+	position: fixed;
+	background-color: #167ec2;
+	bottom: 0;
+	top: 0;
+	max-height: 100dvh;
+	left: 0;
+	z-index: -1;
+	right: 0;
+	padding-top: 48px;
+	padding-left: 48px;
 }
-.main .slides li{
+.main .slides li {
 	height: 355px;
 }
-.portfolio__list{
+.portfolio__list {
 	flex-wrap: wrap;
 }
-.why-work{
+.why-work {
 	overflow: hidden;
+}
+.menu__title {
+	font-weight: 300;
+	font-size: 20px;
+	color: #f4f4f4;
+	margin-bottom: 48px;
+}
+.header.open .menu {
+	display: none;
+}
+.header.open .logo {
+	display: none !important;
+}
+.header.open .phones {
+	display: none !important;
+}
+.menu-mob ul .submenu {
+	position: relative;
+	opacity: 1;
+	transform: none;
+	top: inherit;
+	bottom: inherit;
+	left: inherit;
+	right: inherit;
+	margin-top: 4px;
+}
+.menu-mob ul .submenu a {
+	font-weight: 300;
+	font-size: 20px;
+	line-height: 150%;
+	color: #f4f4f4;
+	text-decoration: none;
+	padding-inline: 0;
+}
+.menu-mob ul {
+	list-style: none;
+	font-weight: 300;
+	font-size: 32px;
+	color: #f4f4f4;
+	padding-left: 0;
+}
+.menu-mob ul a {
+	text-decoration: none;
+}
+.header.open .open-menu{
+	display: none;
+}
+.header.open .asd{
+	border:none;
+	
 }
