--- a/public_html/bitrix/templates/bestmaket_new/template_styles.css
+++ b/public_html/bitrix/templates/bestmaket_new/template_styles.css
@@ -5901,6 +5901,9 @@ input:focus {
 	font-size: 32px;
 	color: #f4f4f4;
 	padding-left: 0;
+	max-width: 1000px;
+	position: relative;
+	padding-right: 12px;
 }
 .menu-mob ul a {
 	text-decoration: none;
@@ -5911,4 +5914,19 @@ input:focus {
 .header.open .asd{
 	border:none;
 	
+}
+.menu-mob .second-item{
+	position: absolute;
+	top: 40%;
+}
+
+.menu-mob .no-submenu:nth-child(6) {
+    position: absolute;
+    right: 9%;
+		top: 14%;
+}
+.menu-mob .no-submenu:nth-child(7) {
+    position: absolute;
+    right: 6%;
+    top: 30%;
 }
