--- a/public_html/bitrix/templates/bestmaket_new/components/bitrix/menu/horizontal_multilevel_mob/style.css
+++ b/public_html/bitrix/templates/bestmaket_new/components/bitrix/menu/horizontal_multilevel_mob/style.css
@@ -13,7 +13,7 @@
 	/* margin-left: 10px; */
 }
 .submenu {
-	width: 15rem !important;
+	width: 15rem ;
 	position: absolute;
 	left: 0;
 	top: 100%;
@@ -23,9 +23,9 @@
 	transform: scaleY(0);
 	transform-origin: 0 0;
 	transition: .5s ease-in-out;
-	display: flex !important;
-	flex-direction: column !important;
-	background: #1d7fc0 !important;
+	display: flex ;
+	flex-direction: column ;
+	background: #1d7fc0 ;
 }
 /*.submenu a {*/
 /*	color:#273037;*/
